# index-bloom

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: bloom_filter.rs  errors.rs  index.rs  indexer.rs  lib.rs  main.rs  tokens.rs
src/indexer/: index.rs
test/data/: simple_content.txt  simple_dump.json  test_restore.json
test/data/random_directory/sub_directory/: file2.txt
test/data/several_matches_directory/: file2.txt
test/data/simple_directory/: file1.txt
