[package]
name = "index-bloom"
version = "0.2.0"
authors = ["Olivier Despesse <olived19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.9.0"
unidecode = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.bitvec]
version = "0.19.3"
features = ["serde"]
